[package]
name = "backend-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = "0.4.4"  # Database driver
serde_json = "1"
chrono = "0.4.19"

struct-field-names-as-array = "0.1.3"

url = { version = "2.2.2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
poem-openapi = { version = "1.3.22", features = ["redoc", "uuid", "url", "chrono"] }

bincode = { version = "2.0.0-rc.1", optional = true, features = ["serde"] }